# Tucil3_13524042_13524088

./: CMakeLists.txt  README.md
data/input/: test1.txt
src/: board.hpp  graph.cpp  graph.hpp  gui.cpp  heuristikCost.cpp  loadSave.cpp  loadSave.hpp  main.cpp  searchAlgorithm.cpp
src/include/: board.hpp  graph.hpp  gui.hpp  heuristikCost.hpp  loadSave.hpp  searchAlgorithm.hpp  state.hpp
test/input/: test14.txt  test2.txt  test25.txt  test3.txt  test4.txt  test5.txt  test50_1.txt  test50_2.txt  test6.txt
test/output/: test14_AStar_H3.txt  test14_GBFS_H1.txt  test14_UCS.txt  test1_AStar_MinSlide.txt  test1_GBFS_Manhattan.txt  test1_UCS.txt  test25_AStar_H3.txt  test25_GBFS_H2.txt  test25_UCS.txt  test2_AStar_H3.txt  test2_GBFS_H2.txt  test2_UCS.txt  test3_GBFS_H1.txt  test3_GBFS_H2.txt  test3_UCS.txt  test4_AStar_H3.txt  test4_GBFS_H2.txt  test4_UCS.txt  test50_1_AStar_H1.txt  test50_1_GBFS_H1.txt  test50_1_UCS.txt  test50_2_AStar_H1.txt  test50_2_GBFS_H2.txt  test50_2_UCS.txt  test5_AStar_H2.txt  test5_AStar_H3.txt  test5_GBFS_H1.txt  test5_UCS.txt  test6_AStar_H3.txt  test6_GBFS_H1.txt  test6_UCS.txt
